--- a/main.html
+++ b/main.html
@@ -16,5 +16,13 @@
 <a href="https://www.facebook.com" class="btn btn-info btn-lg active">Facebook</a>
 
 <a href="https://www.facebook.com" class="btn btn-info btn-lg disabled">Facebook</a>
+
+
+<div class="jumbotron">
+  <h1>This is a simply Jambotron</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <button class="btn-info btn btn-lg">Clik me!</button>
+</div>
+
 </body>
 </html>
