--- a/main.html
+++ b/main.html
@@ -17,12 +17,15 @@
 
 <a href="https://www.facebook.com" class="btn btn-info btn-lg disabled">Facebook</a>
 
+<div class="container">
+  <div class="jumbotron">
+    <h1>This is a simply Jambotron</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <button class="btn-info btn btn-lg">Clik me!</button>
+  </div>
 
-<div class="jumbotron">
-  <h1>This is a simply Jambotron</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <button class="btn-info btn btn-lg">Clik me!</button>
 </div>
+
 
 </body>
 </html>
