--- a/main.html
+++ b/main.html
@@ -9,13 +9,7 @@
 <body>
 <h1> Boostrap 3 review</h1>
 
-<button class="btn btn-success btn-xs">Click me!</button>
 
-<a href="https://www.facebook.com" class="btn btn-info btn-lg">Facebook</a>
-
-<a href="https://www.facebook.com" class="btn btn-info btn-lg active">Facebook</a>
-
-<a href="https://www.facebook.com" class="btn btn-info btn-lg disabled">Facebook</a>
 
 <div class="container">
   <div class="jumbotron">
@@ -23,6 +17,45 @@
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
     <button class="btn-info btn btn-lg">Clik me!</button>
   </div>
+  <button class="btn btn-success btn-xs">Click me!</button>
+
+  <a href="https://www.facebook.com" class="btn btn-info btn-lg">Facebook</a>
+
+  <a href="https://www.facebook.com" class="btn btn-info btn-lg active">Facebook</a>
+
+  <a href="https://www.facebook.com" class="btn btn-info btn-lg disabled">Facebook</a>
+
+  <br>
+
+  <br>
+
+
+  <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputFile">File input</label>
+            <input type="file" id="exampleInputFile">
+            <p class="help-block">Example block-level help text here.</p>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> Check me out
+            </label>
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+
+
+
+
 
 </div>
 
