--- a/main.html
+++ b/main.html
@@ -1,64 +1,97 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <title>Document</title>
-</head>
-<body>
-<h1> Boostrap 3 review</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Boostrap 3 review</h1>
 
+    <div class="container">
+      <div class="jumbotron">
+        <h1>This is a simply Jambotron</h1>
+        <p class="lead">
+          This is a simple hero unit, a simple jumbotron-style component for
+          calling extra attention to featured content or information.
+        </p>
+        <button class="btn-info btn btn-lg">Clik me!</button>
+      </div>
+      <button class="btn btn-success btn-xs">Click me!</button>
 
+      <a href="https://www.facebook.com" class="btn btn-info btn-lg"
+        >Facebook</a
+      >
 
-<div class="container">
-  <div class="jumbotron">
-    <h1>This is a simply Jambotron</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <button class="btn-info btn btn-lg">Clik me!</button>
-  </div>
-  <button class="btn btn-success btn-xs">Click me!</button>
+      <a href="https://www.facebook.com" class="btn btn-info btn-lg active"
+        >Facebook</a
+      >
 
-  <a href="https://www.facebook.com" class="btn btn-info btn-lg">Facebook</a>
+      <a href="https://www.facebook.com" class="btn btn-info btn-lg disabled"
+        >Facebook</a
+      >
 
-  <a href="https://www.facebook.com" class="btn btn-info btn-lg active">Facebook</a>
+      <br />
 
-  <a href="https://www.facebook.com" class="btn btn-info btn-lg disabled">Facebook</a>
+      <br />
 
-  <br>
+      <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input
+            type="email"
+            class="form-control"
+            id="exampleInputEmail1"
+            placeholder="Email"
+          />
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="exampleInputPassword1"
+            placeholder="Password"
+          />
+        </div>
+        <div class="form-group">
+          <label for="exampleInputFile">File input</label>
+          <input type="file" id="exampleInputFile" />
+          <p class="help-block">Example block-level help text here.</p>
+        </div>
+        <div class="checkbox">
+          <label> <input type="checkbox" /> Check me out </label>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
 
-  <br>
+      <!-- Inline form -->
 
-
-  <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputFile">File input</label>
-            <input type="file" id="exampleInputFile">
-            <p class="help-block">Example block-level help text here.</p>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Check me out
-            </label>
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-</form>
-
-
-
-
-
-
-</div>
-
-
-</body>
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="exampleInputName2">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="exampleInputName2"
+            placeholder="Jane Doe"
+          />
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail2">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="exampleInputEmail2"
+            placeholder="jane.doe@example.com"
+          />
+        </div>
+        <button type="submit" class="btn btn-default">Send invitation</button>
+      </form>
+    </div>
+  </body>
 </html>
