--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Boostrap 3 review</h1>
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand">Morning</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Menu</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Signup</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+    </nav>
 
     <div class="container">
       <div class="jumbotron">
