--- a/main.html
+++ b/main.html
@@ -11,18 +11,20 @@
   </head>
   <body>
     <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a href="#" class="navbar-brand">Morning</a>
+      <div class="container">
+        <ul class="navbar-header">
+          <a href="#" class="navbar-brand">Morning</a>
+        </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Menu</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Signup</a></li>
+          <li><a href="#">Login</a></li>
+        </ul>
       </div>
-      <ul class="nav navbar-nav">
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Menu</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Signup</a></li>
-        <li><a href="#">Login</a></li>
-      </ul>
     </nav>
 
     <div class="container">
