--- a/main.html
+++ b/main.html
@@ -7,9 +7,33 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <style type="text/css">
+        .red{
+          background: red;
+          border: 1px solid yellow;
+        }
+    </style>
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+         <div  class="col-lg-2 red">Blox1</div>
+         <div  class="col-lg-8 red">Block2</div>
+         <div  class="col-lg-2 red">Block3</div>
+     </div>
+     <div class="col">
+        <div  class="col-lg-4 red">Blox1</div>
+        <div  class="col-lg-4 red">Block2</div>
+        <div  class="col-lg-4 red">Block3</div>
+    </div>
+    <div class="row">
+       <div  class="col-lg-4 red">Blox1</div>
+       <div  class="col-lg-4 red">Block2</div>
+       <div  class="col-lg-4 red">Block3</div>
+   </div>
+   </div>
+
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
@@ -46,13 +70,9 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#bs-example-navbar-collapse-1"
-            aria-expanded="false"
-          >
+          <button type="button"  class="navbar-toggle collapsed" data-toggle="collapse"
+            data-target="#bs-nav-demo"
+            aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -61,8 +81,9 @@
           <a class="navbar-brand" href="#">Brand Name</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <!-- Collect the nav links, forms, and other content for toggling
+         Everything in here is collapsed-->
+        <div class="collapse navbar-collapse" id="bs-nav-demo">
           <ul class="nav navbar-nav">
             <li class="active">
               <a href="#">Link <span class="sr-only">(current)</span></a>
