--- a/main.html
+++ b/main.html
@@ -17,7 +17,28 @@
   </head>
   <body>
     <div class="container">
+
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div>
+
       <div class="row">
+         <div  class="col-md-3 col-sm-6 red">Blox1</div>
+         <div  class="col-md-3 col-sm-6 red">Block2</div>
+         <div  class="col-md-3 col-sm-6 red">Block3</div>
+         <div  class="col-md-3 col-sm-6 red">Block4</div>
+     </div>
+
+      <!-- <div class="row">
          <div  class="col-lg-2 red">Blox1</div>
          <div  class="col-lg-8 red">Block2</div>
          <div  class="col-lg-2 red">Block3</div>
@@ -26,12 +47,13 @@
         <div  class="col-lg-4 red">Blox1</div>
         <div  class="col-lg-4 red">Block2</div>
         <div  class="col-lg-4 red">Block3</div>
+        <div  class="col-lg-4 red">Block3</div>
     </div>
     <div class="row">
        <div  class="col-lg-4 red">Blox1</div>
        <div  class="col-lg-4 red">Block2</div>
        <div  class="col-lg-4 red">Block3</div>
-   </div>
+   </div> -->
    </div>
 
     <nav class="navbar navbar-default">
