--- a/main.html
+++ b/main.html
@@ -12,12 +12,17 @@
           background: red;
           border: 1px solid yellow;
         }
+        .oragnge{
+          background: orange;
+          border:1px dashed skyblue;
+          height:50px;
+        }
     </style>
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-
+<!--
       <div class="col-lg-1 col-md-2 red">COL</div>
       <div class="col-lg-1 col-md-2 red">COL</div>
       <div class="col-lg-1 col-md-2 red">COL</div>
@@ -29,13 +34,28 @@
       <div class="col-lg-1 col-md-2 red">COL</div>
       <div class="col-lg-1 col-md-2 red">COL</div>
       <div class="col-lg-1 col-md-2 red">COL</div>
-      <div class="col-lg-1 col-md-2 red">COL</div>
+      <div class="col-lg-1 col-md-2 red">COL</div> -->
 
       <div class="row">
-         <div  class="col-md-3 col-sm-6 red">Blox1</div>
-         <div  class="col-md-3 col-sm-6 red">Block2</div>
-         <div  class="col-md-3 col-sm-6 red">Block3</div>
-         <div  class="col-md-3 col-sm-6 red">Block4</div>
+         <div  class="col-md-3 col-sm-6 red">
+           <div class="row">
+             <div class="col-lg-6 red orange">First half</div>
+             <div class="col-lg-6 red orange">Second half</div>
+           </div>
+         </div>
+         <div  class="col-md-3 col-sm-6 red">Tour Date</div>
+         <div  class="col-md-3 col-sm-6 red">Tour Date</div>
+         <div  class="col-md-3 col-sm-6 red">
+           <div class="row">
+             <!-- (div.col-lg-2.orange({Item$}))*6 -->
+                <div class="col-lg-2 orange">Item1</div>
+                <div class="col-lg-2 orange">Item2</div>
+                <div class="col-lg-2 orange">Item3</div>
+                <div class="col-lg-2 orange">Item4</div>
+                <div class="col-lg-2 orange">Item5</div>
+                <div class="col-lg-2 orange">Item6</div>
+          </div>
+         <div></div></div>
      </div>
 
       <!-- <div class="row">
