--- a/main.html
+++ b/main.html
@@ -12,10 +12,11 @@
           background: red;
           border: 1px solid yellow;
         }
-        .oragnge{
+        .orange{
           background: orange;
-          border:1px dashed skyblue;
-          height:50px;
+          border: 1px dashed skyblue;
+          height: 50px;
+          width:100px;
         }
     </style>
     <title>Document</title>
@@ -46,16 +47,16 @@
          <div  class="col-md-3 col-sm-6 red">Tour Date</div>
          <div  class="col-md-3 col-sm-6 red">Tour Date</div>
          <div  class="col-md-3 col-sm-6 red">
-           <div class="row">
-             <!-- (div.col-lg-2.orange({Item$}))*6 -->
-                <div class="col-lg-2 orange">Item1</div>
-                <div class="col-lg-2 orange">Item2</div>
-                <div class="col-lg-2 orange">Item3</div>
-                <div class="col-lg-2 orange">Item4</div>
-                <div class="col-lg-2 orange">Item5</div>
-                <div class="col-lg-2 orange">Item6</div>
-          </div>
-         <div></div></div>
+              <div class="row">
+               <!-- (div.col-lg-2.orange({Item$}))*6 -->
+                  <div class="col-lg-2 orange">Item1</div>
+                  <div class="col-lg-2 orange">Item2</div>
+                  <div class="col-lg-2 orange">Item3</div>
+                  <div class="col-lg-2 orange">Item4</div>
+                  <div class="col-lg-2 orange">Item5</div>
+                  <div class="col-lg-2 orange">Item6</div>
+              </div>
+         </div>
      </div>
 
       <!-- <div class="row">
