--- a/index_image_gallery.html
+++ b/index_image_gallery.html
@@ -10,7 +10,7 @@
   <title>Image Gallery</title>
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand">IMGS</a>
+        <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> IMGS</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -44,8 +44,9 @@
 
 <div class="container">
    <div class="jumbotron">
-      <h1>The Image Gallery</h1>
+      <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
       <p> A bunch of Images</p>
+
    </div>
 
    <div class="row">
