--- a/index_image_gallery.html
+++ b/index_image_gallery.html
@@ -46,7 +46,7 @@
 
 <div class="container">
    <div class="jumbotron">
-      <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
+      <h1><i class="fas fa-camera-retro"></i> The Image Gallery</h1>
       <p> A bunch of Images</p>
 
    </div>
