--- a/land_index.html
+++ b/land_index.html
@@ -13,10 +13,12 @@
 
   <div class="container">
     <div class="row">
-      <h1 class="col-lg-12"> Basic Landing Page</h1>
-      <h3>Make your own landing page</h3>
-      <hr>
-      <button class="btn btn-default btn-lg">Create your Landing Page</button>
+      <div id="content">
+         <h1 class="col-lg-12"> Basic Landing Page</h1>
+         <h3>Make your own landing page</h3>
+         <hr>
+         <button class="btn btn-default btn-lg">Create your Landing Page</button>
+      </div>
     </div>
   </div>
 
