--- a/land_index.html
+++ b/land_index.html
@@ -7,6 +7,7 @@
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style_landing.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
   <title>Basic Landing</title>
 </head>
 <body>
