--- a/land_index.html
+++ b/land_index.html
@@ -7,7 +7,8 @@
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style_landing.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <title>Basic Landing</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
+
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -45,7 +47,7 @@
          <h1 class="col-lg-12"> Basic Landing Page</h1>
          <h3>Make your own landing page</h3>
          <hr>
-         <button class="btn btn-default btn-lg">Create your Landing Page</button>
+         <button class="btn btn-default btn-lg"><i class="fas fa-arrow-circle-right"></i> Create your Landing Page</button>
       </div>
     </div>
   </div>
